--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
       file-size-threshold: -1
       enabled: true
   datasource:
-    username: root
-    url: jdbc:mysql://monorail.proxy.rlwy.net:55053/railway #jdbc:mysql://monorail.proxy.rlwy.net:55053/railway
-    password: 4DDegac1e4EHeHAFEcaDfA2GhhAcfCgd
+    url: jdbc:mysql://${ PROD_DB_HOST }:${ PROD_DB_PORT }/${ PROD_DB_NAME } #jdbc:mysql://monorail.proxy.rlwy.net:55053/railway
+    username: ${PROD_DB_USERNAME}
+    password: ${PROD_DB_PASSWORD}
   application:
     name: ciudadania
 
