--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       file-size-threshold: -1
       enabled: true
   datasource:
-    url: jdbc:mysql://${ PROD_DB_HOST }:${ PROD_DB_PORT }/${ PROD_DB_NAME } #jdbc:mysql://monorail.proxy.rlwy.net:55053/railway
+    url: jdbc:mysql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME} #jdbc:mysql://monorail.proxy.rlwy.net:55053/railway
     username: ${PROD_DB_USERNAME}
     password: ${PROD_DB_PASSWORD}
   application:
@@ -22,7 +22,5 @@ logging.level:
   org.hibernate.SQL: INFO
   org.hibernate.type.descriptor.sql: INFO
 
-server:
-  port: '8081'
-
-
+#server:
+  #port: '8081'
