--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
       file-size-threshold: -1
       enabled: true
   datasource:
-    url: jdbc:mysql://${HOST_PROD}:${PORT_PROD}/${DB_PROD} #jdbc:mysql://monorail.proxy.rlwy.net:55053/railway
-    username: ${USER_PROD}
-    password: ${PASS_PROD}
+    url: jdbc:mysql://jbb8y3dri1ywovy2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/rgp2dao17azy0xp4 #jdbc:mysql://monorail.proxy.rlwy.net:55053/railway
+    username: w661xxiflr7wjjqn
+    password: r0il3fszvv1n8l5c
   application:
     name: ciudadania
 
